# llm-azure-ai-foundry

./: README.md  llm_azure.py  llm_azure_ai_foundry.py  pyproject.toml
.github/workflows/: python-ci.yml
