[project]
name = "llm-azure"
version = "0.1.0"
description = "LLM plugin to access model deployments on Azure AI Foundry"
readme = "README.md"
authors = [{name = "Anthony Shaw"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiohttp>=3.11.18",
    "llm>=0.26",
    "azure-ai-projects>=1.0.0, <2.0.0",
    "azure-identity"
]

[project.urls]
Homepage = "https://github.com/tonybaloney/llm-azure"
Changelog = "https://github.com/tonybaloney/llm-azure/releases"
Issues = "https://github.com/tonybaloney/llm-azure/issues"
CI = "https://github.com/tonybaloney/llm-azure/actions"

[project.entry-points.llm]
azure = "llm_azure"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "ruff", "pyright"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
