[project]
name = "llm-azure-ai-foundry"
version = "0.2.0"
description = "LLM plugin to access model deployments on Azure AI Foundry and Foundry Local"
readme = "README.md"
authors = [{name = "Anthony Shaw"}]
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiohttp>=3.11.18",
    "llm>=0.26",
    "azure-ai-projects>=1.0.0, <2.0.0",
    "azure-identity",
    "foundry-local-sdk==0.3.1",
]

[project.urls]
Homepage = "https://github.com/tonybaloney/llm-azure-ai-foundry"
Changelog = "https://github.com/tonybaloney/llm-azure-ai-foundry/releases"
Issues = "https://github.com/tonybaloney/llm-azure-ai-foundry/issues"
CI = "https://github.com/tonybaloney/llm-azure-ai-foundry/actions"

[project.entry-points.llm]
azure_ai_foundry = "llm_azure_ai_foundry"

[project.optional-dependencies]
test = ["pytest", "pytest-recording", "pytest-asyncio", "ruff", "pyright"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
